# ffiPrimer

./: CMakeLists.txt  README.md  myModuleFfi.ag  myModuleFfi.c  vcpkg.json
